clusters/titania/apps/otpcloud/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: otpcloud
    app.kubernetes.io/name: otpcloud
  name: otpcloud
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: otpcloud
      app.kubernetes.io/name: otpcloud
  template:
    metadata:
      annotations:
        secret.reloader.stakater.com/reload: otpcloud-secret-vault
      labels:
        app.kubernetes.io/instance: otpcloud
        app.kubernetes.io/name: otpcloud
    spec:
      containers:
      - image: kmjayadeep/otpcloud:0.3
        imagePullPolicy: IfNotPresent
        name: otpcloud
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: http
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
