clusters/titania/apps/otpcloud/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: otpcloud
    app.kubernetes.io/name: otpcloud
  name: otpcloud-ingress
spec:
  tls:
  - hosts:
    - "*.cosmos.cboxlab.com"
    secretName: cosmos-cboxlab-cert
  rules:
  - host: totp.cosmos.cboxlab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: otpcloud
            port:
              name: http
